# sagan

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  FAQ  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  index.html  params.json  sagan.spec
doc/: sagan_freebsd.howto.md
doc/source/: articles.rst  conf.py  configuration.rst  contributing-coding-style.rst  getting-help.rst  high-performance.rst  index.rst  install.rst  journald.rst  rule-keywords.rst  rule-options.rst  rule-syntax.rst  sagan-json.rst  saganpeek.rst  todo.rst  what-is-sagan.rst
doc/source/blogs/: dynamic-rules-with-sagan.rst  index.rst  sagan-1-0-0.rst  sagan-flowbits.rst  sagan-output-to-other-siems.rst  what-sagan-is-and-is-not.rst
etc/: sagan.8  sagan.conf  sagan.yaml
extra/: README
extra/RPM/: README  sagan-sagan.conf.patch  sagan-setup.libexec  sagan.logrotate  sagan.service  sagan.spec  sagan.tmpfiles
extra/barnyard2/: barnyard2.cli.conf  barnyard2.snorby.conf
extra/bluedot/code/: intel.php
extra/bluedot/etc/: bluedot-config.php
extra/bluedot/sql/: bluedot.sql
extra/build-test/: build-test  build-test.sh
extra/built-test/: build-test
extra/conversion/: ossec-sagan.pl
extra/external-test/: external-program
extra/nxfifo/: nxfifo.c
extra/pulledpork/: fetchcarl.sh  pulledpork.sagan.conf
extra/qdee/: README.md  qdee.pl
extra/rc.d-freebsd/: sagan
extra/rsyslog/: sagan.conf
extra/sagan-gtk/: Makefile  sagan-gtk.c
extra/sagan-notify/: Makefile  sagan-notify.c
src/: .Makefile.am.swp  Makefile  Makefile.am  Makefile.in  aetas.c  aetas.h  after.c  after.h  check-flow.c  check-flow.h  classifications.c  classifications.h  config-yaml.c  config-yaml.h  content.c  content.h  credits.c  credits.h  debug.c  debug.h  event-id.c  event-id.h  flexbit-mmap.c  flexbit-mmap.h  flexbit-redis.c  flexbit-redis.h  flexbit.c  flexbit.h  flow.c  flow.h  gen-msg.c  gen-msg.h  geoip.c  geoip.h  geoip2.c  geoip2.h  ignore-list.c  ignore-list.h  input-json-map.c  input-json-map.h  (+136 more)
src/output-plugins/: alert.c  alert.h  esmtp.c  esmtp.h  eve.c  eve.h  external.c  external.h  fast.c  fast.h  sagan-alert.c  sagan-alert.h  sagan-esmtp.c  sagan-esmtp.h  sagan-eve.c  sagan-external.c  sagan-external.h  sagan-fast.c  sagan-fast.h  sagan-gtk.c  sagan-idmef.c  sagan-logzilla.c  sagan-logzilla.h  sagan-prelude.c  sagan-prelude.h  sagan-snort.c  sagan-snort.h  sagan-snortsam.c  sagan-snortsam.h  sagan-syslog.c  sagan-syslog.h  sagan-twofish.c  sagan-twofish.h  sagan-unified2.c  sagan-unified2.h  snortsam-twofish.c  snortsam-twofish.h  snortsam.c  snortsam.h  syslog-handler.c  (+3 more)
src/parsers/: hash.c  ip.c  json.c  json.h  parse-hash.c  parse-ip-simple.c  parse-ip.c  parse-port-simple.c  parse-port.c  parse-proto.c  parsers.h  port.c  proto.c
src/parsers/sagan-strstr/: sagan-strstr-hook.c  sagan-strstr-hook.h  strstr_sse2.S  strstr_sse2.s  strstr_sse4_2.S  strstr_sse4_2.s
src/parsers/strstr-asm/: strstr-hook.c  strstr-hook.h  strstr_sse2.S  strstr_sse4_2.S
src/processors/: blacklist.c  blacklist.h  bluedot.c  bluedot.h  bro-intel.c  bro-intel.h  client-stats.c  client-stats.h  dynamic-rules.c  dynamic-rules.h  engine.c  engine.h  perfmon.c  perfmon.h  report-clients.c  sagan-blacklist.c  sagan-blacklist.h  sagan-bluedot.c  sagan-bluedot.h  sagan-bro-intel.c  sagan-bro-intel.h  sagan-cif.c  sagan-cif.h  sagan-criticalstack.c  sagan-criticalstack.h  sagan-dynamic-rules.c  sagan-dynamic-rules.h  sagan-engine.c  sagan-engine.h  sagan-perfmon.c  sagan-perfmon.h  sagan-report-clients.c  sagan-report-clients.h  sagan-search.c  sagan-search.h  sagan-track-clients.c  sagan-track-clients.h  sagan-websense.c  stats-json.c  stats-json.h  (+3 more)
tools/: Makefile  Makefile.am  sagan-peek.c  saganpeek.c
